pdraw-t03/src/PDrawParser.java
// Generated from PDraw.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PDrawParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, INT=50, REAL=51, HEX=52, COLOR=53, 
		STRING=54, BOOL=55, ANGLE=56, ID=57, WS=58, COMMENT=59;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_defineVariable = 2, RULE_variableList = 3, 
		RULE_variable = 4, RULE_defineCanvas = 5, RULE_definePen = 6, RULE_penProperties = 7, 
		RULE_createPen = 8, RULE_setPenProperty = 9, RULE_movePen = 10, RULE_typeOfMovements = 11, 
		RULE_rotation = 12, RULE_movement = 13, RULE_pressureChange = 14, RULE_moveTo = 15, 
		RULE_penAction = 16, RULE_actionSequence = 17, RULE_action = 18, RULE_executeProgram = 19, 
		RULE_outputStatement = 20, RULE_pauseStatement = 21, RULE_assignmentStatement = 22, 
		RULE_assignmentStatementForLoop = 23, RULE_userInputStatement = 24, RULE_realAssignmentStatement = 25, 
		RULE_intAssignmentStatement = 26, RULE_stringAssignmentStatement = 27, 
		RULE_loopStatement = 28, RULE_untilStatement = 29, RULE_forStatement = 30, 
		RULE_untilCondition = 31, RULE_condition = 32, RULE_block = 33, RULE_expression = 34, 
		RULE_value = 35, RULE_type = 36, RULE_cast = 37, RULE_property = 38, RULE_rotateDirection = 39, 
		RULE_moveDirection = 40, RULE_pressureDirection = 41, RULE_logical_operator = 42, 
		RULE_relational_operator = 43, RULE_arithmetic_operator = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "defineVariable", "variableList", "variable", 
			"defineCanvas", "definePen", "penProperties", "createPen", "setPenProperty", 
			"movePen", "typeOfMovements", "rotation", "movement", "pressureChange", 
			"moveTo", "penAction", "actionSequence", "action", "executeProgram", 
			"outputStatement", "pauseStatement", "assignmentStatement", "assignmentStatementForLoop", 
			"userInputStatement", "realAssignmentStatement", "intAssignmentStatement", 
			"stringAssignmentStatement", "loopStatement", "untilStatement", "forStatement", 
			"untilCondition", "condition", "block", "expression", "value", "type", 
			"cast", "property", "rotateDirection", "moveDirection", "pressureDirection", 
			"logical_operator", "relational_operator", "arithmetic_operator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "','", "'='", "'define'", "'canvas'", "'('", "')'", "'pen'", 
			"'{'", "'}'", "'new'", "'<-'", "'position'", "'execute'", "'->'", "'stdout'", 
			"'pause'", "'real'", "'int'", "'string'", "'until'", "'for'", "'stdin'", 
			"'point'", "'bool'", "'color'", "'orientation'", "'thickness'", "'pressure'", 
			"'left'", "'right'", "'forward'", "'backward'", "'up'", "'down'", "'or'", 
			"'and'", "'=='", "'<'", "'>'", "'!='", "'<='", "'>='", "'+'", "'-'", 
			"'*'", "'/'", "'//'", "'\\\\'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "INT", "REAL", "HEX", "COLOR", "STRING", "BOOL", "ANGLE", 
			"ID", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PDraw.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PDrawParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PDrawParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 287104476311847248L) != 0)) {
				{
				{
				setState(90);
				statement();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementOutputContext extends StatementContext {
		public OutputStatementContext outputStatement() {
			return getRuleContext(OutputStatementContext.class,0);
		}
		public StatementOutputContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterStatementOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitStatementOutput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitStatementOutput(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementDefinePenContext extends StatementContext {
		public DefinePenContext definePen() {
			return getRuleContext(DefinePenContext.class,0);
		}
		public StatementDefinePenContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterStatementDefinePen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitStatementDefinePen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitStatementDefinePen(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementDefineCanvasContext extends StatementContext {
		public DefineCanvasContext defineCanvas() {
			return getRuleContext(DefineCanvasContext.class,0);
		}
		public StatementDefineCanvasContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterStatementDefineCanvas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitStatementDefineCanvas(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitStatementDefineCanvas(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementPauseContext extends StatementContext {
		public PauseStatementContext pauseStatement() {
			return getRuleContext(PauseStatementContext.class,0);
		}
		public StatementPauseContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterStatementPause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitStatementPause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitStatementPause(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementExecuteProgramContext extends StatementContext {
		public ExecuteProgramContext executeProgram() {
			return getRuleContext(ExecuteProgramContext.class,0);
		}
		public StatementExecuteProgramContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterStatementExecuteProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitStatementExecuteProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitStatementExecuteProgram(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementUserInputContext extends StatementContext {
		public UserInputStatementContext userInputStatement() {
			return getRuleContext(UserInputStatementContext.class,0);
		}
		public StatementUserInputContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterStatementUserInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitStatementUserInput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitStatementUserInput(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementLoopContext extends StatementContext {
		public LoopStatementContext loopStatement() {
			return getRuleContext(LoopStatementContext.class,0);
		}
		public StatementLoopContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterStatementLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitStatementLoop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitStatementLoop(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementMovePenContext extends StatementContext {
		public MovePenContext movePen() {
			return getRuleContext(MovePenContext.class,0);
		}
		public StatementMovePenContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterStatementMovePen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitStatementMovePen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitStatementMovePen(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementAssignmentContext extends StatementContext {
		public AssignmentStatementContext assignmentStatement() {
			return getRuleContext(AssignmentStatementContext.class,0);
		}
		public StatementAssignmentContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterStatementAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitStatementAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitStatementAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementDefineVariableContext extends StatementContext {
		public DefineVariableContext defineVariable() {
			return getRuleContext(DefineVariableContext.class,0);
		}
		public StatementDefineVariableContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterStatementDefineVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitStatementDefineVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitStatementDefineVariable(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementCreatePenContext extends StatementContext {
		public CreatePenContext createPen() {
			return getRuleContext(CreatePenContext.class,0);
		}
		public StatementCreatePenContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterStatementCreatePen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitStatementCreatePen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitStatementCreatePen(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementSetPenPropertyContext extends StatementContext {
		public SetPenPropertyContext setPenProperty() {
			return getRuleContext(SetPenPropertyContext.class,0);
		}
		public StatementSetPenPropertyContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterStatementSetPenProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitStatementSetPenProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitStatementSetPenProperty(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementPenActionContext extends StatementContext {
		public PenActionContext penAction() {
			return getRuleContext(PenActionContext.class,0);
		}
		public StatementPenActionContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterStatementPenAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitStatementPenAction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitStatementPenAction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new StatementDefineVariableContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				defineVariable();
				}
				break;
			case 2:
				_localctx = new StatementDefineCanvasContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				defineCanvas();
				}
				break;
			case 3:
				_localctx = new StatementDefinePenContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				definePen();
				}
				break;
			case 4:
				_localctx = new StatementCreatePenContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(101);
				createPen();
				}
				break;
			case 5:
				_localctx = new StatementSetPenPropertyContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(102);
				setPenProperty();
				}
				break;
			case 6:
				_localctx = new StatementMovePenContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(103);
				movePen();
				}
				break;
			case 7:
				_localctx = new StatementPenActionContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(104);
				penAction();
				}
				break;
			case 8:
				_localctx = new StatementExecuteProgramContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(105);
				executeProgram();
				}
				break;
			case 9:
				_localctx = new StatementOutputContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(106);
				outputStatement();
				}
				break;
			case 10:
				_localctx = new StatementPauseContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(107);
				pauseStatement();
				}
				break;
			case 11:
				_localctx = new StatementAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(108);
				assignmentStatement();
				}
				break;
			case 12:
				_localctx = new StatementUserInputContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(109);
				userInputStatement();
				}
				break;
			case 13:
				_localctx = new StatementLoopContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(110);
				loopStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefineVariableContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariableListContext variableList() {
			return getRuleContext(VariableListContext.class,0);
		}
		public DefineVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterDefineVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitDefineVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitDefineVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineVariableContext defineVariable() throws RecognitionException {
		DefineVariableContext _localctx = new DefineVariableContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defineVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			type();
			setState(114);
			variableList();
			setState(115);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableListContext extends ParserRuleContext {
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public VariableListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterVariableList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitVariableList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitVariableList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableListContext variableList() throws RecognitionException {
		VariableListContext _localctx = new VariableListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			variable();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(118);
				match(T__1);
				setState(119);
				variable();
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PDrawParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(ID);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(126);
				match(T__2);
				setState(127);
				expression(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefineCanvasContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PDrawParser.ID, 0); }
		public TerminalNode STRING() { return getToken(PDrawParser.STRING, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public DefineCanvasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineCanvas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).enterDefineCanvas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PDrawListener ) ((PDrawListener)listener).exitDefineCanvas(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PDrawVisitor ) return ((PDrawVisitor<? extends T>)visitor).visitDefineCanvas(this);
			else return visitor.visitChildren(this);
		}
	}
